# blog

./: .gitignore  Dockerfile  Dockerfile.test  Jenkinsfile  MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg  setup.py
.github/: settings.yml
.github/workflows/: build.yml  deploy.yml  test.yml
articles/: 2021-12-13_test.md  2021-12-29_test-again.md  2022-01-05_motivation-for-side-projects.md  2022-01-15_terraform-and-ansible.md  2022-02-06_go_with_docker.md  2022-03-13_from-zero-to-production-in-azure-with-terraform.md  2022-06-02_automated-version-releases.md  2022-08-07_car-history.md  2022-08-15_car-history-part-2.md  2022-08-22_car-history-part-3.md  2022-11-18_devhub-north.md  2023-07-23_saving-money-with-lambdas.md  2023-09-17_pkm.md  2023-12-29_a-year-in-developer-experience.md  2024-07-07_testing-golang-and-dynamodb-with-testcontainers.md  2024-08-10_losing-discovery.md  2024-08-30_terraform-cdk.md  2024-11-12_static-site-generator.md  2024-12-14_mac-setup.md  2024-12-21_mac-setup.md  2024-12-31_pkm-update-plugins.md  2025-01-28_returning-to-work.md  2025-05-11_nostalgia-on-retro-programming.md  2025-05-19_dangers-of-hype.md  2026-02-16_pragmatic-summit.md  2026-04-29_journal-v1.md
blog/: __init__.py  articles.py  blog.py  config.py  generate.py
blog/assets/: gulpfile.js  package-lock.json  package.json
blog/static/: humans.txt
blog/templates/: 404.html  500.html  base.html  index.html  journal.html  now.html  sitemap.xml  (+1 more)
docker/: nginx.conf
tests/: conftest.py  test_articles.py  test_blog.py  test_factory.py  test_generate.py
(+7 files in other folders)
