[metadata]
name = blog
maintainer = Jamie Hurst
maintainer_email = jamie@jamiehurst.co.uk
description = Basic blog application using Markdown articles.
long_description = file: README.md
long_description_content_type = text/markdown

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    blog
