[metadata]
name = blog
version = v1.0.3
author = Jamie Hurst
author_email = jamie@jamiehurst.co.uk
description = Simple blog static site generator for jamiehurst.co.uk reads in and parses Markdown articles
long_description = file: README.md
url = https://jamiehurst.co.uk
license = MIT

[options]
packages = blog
python_requires = >=3.12
install_requires =
  jinja2
  markdown

[options.extras_require]
devel =
  coverage
  pylint
  pytest
  when-changed
